--- a/HaierOven/MainViewNormalCell.xib
+++ b/HaierOven/MainViewNormalCell.xib
@@ -129,15 +129,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3hh-yy-YOe">
-                                <rect key="frame" x="271" y="28" width="41" height="41"/>
+                                <rect key="frame" x="278" y="40" width="20" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="41" id="2Tj-cS-O0x"/>
-                                    <constraint firstAttribute="height" constant="41" id="EAC-Kh-Ybt"/>
+                                    <constraint firstAttribute="width" constant="20" id="2Tj-cS-O0x"/>
+                                    <constraint firstAttribute="height" constant="30" id="EAC-Kh-Ybt"/>
                                 </constraints>
-                                <state key="normal" image="bofang.png">
+                                <state key="normal" image="default_avatar.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="disabled" image="bofang.png"/>
+                                <state key="disabled" image="go_forward_white.png"/>
                                 <state key="highlighted" image="bofang.png"/>
                                 <connections>
                                     <action selector="Play:" destination="OUd-eZ-CUo" eventType="touchUpInside" id="rNX-ar-Z6P"/>
@@ -165,8 +165,8 @@
                             <constraint firstItem="t9x-aZ-s7r" firstAttribute="top" secondItem="Qcm-dR-3B3" secondAttribute="bottom" constant="8" id="4FA-ht-0pz"/>
                             <constraint firstItem="k1N-i6-vdZ" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="28" id="8p6-ae-RMG"/>
                             <constraint firstItem="k1N-i6-vdZ" firstAttribute="leading" secondItem="v1a-PN-aSo" secondAttribute="leading" constant="17" id="9lK-HQ-PGR"/>
-                            <constraint firstItem="3hh-yy-YOe" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="28" id="Ccs-9E-kvd"/>
-                            <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="t9x-aZ-s7r" secondAttribute="trailing" constant="8" id="Jl2-gB-4fV"/>
+                            <constraint firstItem="3hh-yy-YOe" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="40" id="Ccs-9E-kvd"/>
+                            <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="t9x-aZ-s7r" secondAttribute="trailing" constant="15" id="Jl2-gB-4fV"/>
                             <constraint firstItem="pFM-g6-WlQ" firstAttribute="centerX" secondItem="k1N-i6-vdZ" secondAttribute="centerX" constant="-1" id="Khi-qk-QQB"/>
                             <constraint firstAttribute="height" constant="97" id="NVT-r5-QWE"/>
                             <constraint firstItem="Qcm-dR-3B3" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="24" id="P9S-uN-rPb"/>
@@ -176,8 +176,8 @@
                             <constraint firstItem="t9x-aZ-s7r" firstAttribute="leading" secondItem="k1N-i6-vdZ" secondAttribute="trailing" constant="9" id="WCR-OP-3bw"/>
                             <constraint firstAttribute="trailing" secondItem="OgX-NX-fC0" secondAttribute="trailing" id="dDC-w5-qzw"/>
                             <constraint firstItem="whh-XC-lml" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" constant="27" id="fx4-bw-YPz"/>
-                            <constraint firstAttribute="trailing" secondItem="3hh-yy-YOe" secondAttribute="trailing" constant="8" id="gGu-TR-bes"/>
-                            <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="Qcm-dR-3B3" secondAttribute="trailing" constant="8" id="mdM-HC-oAY"/>
+                            <constraint firstAttribute="trailing" secondItem="3hh-yy-YOe" secondAttribute="trailing" constant="22" id="gGu-TR-bes"/>
+                            <constraint firstItem="3hh-yy-YOe" firstAttribute="leading" secondItem="Qcm-dR-3B3" secondAttribute="trailing" constant="15" id="mdM-HC-oAY"/>
                             <constraint firstItem="OgX-NX-fC0" firstAttribute="top" secondItem="v1a-PN-aSo" secondAttribute="top" id="uV4-3H-Oqm"/>
                             <constraint firstItem="Qcm-dR-3B3" firstAttribute="leading" secondItem="k1N-i6-vdZ" secondAttribute="trailing" constant="9" id="xOH-Ni-eQ3"/>
                         </constraints>
@@ -225,6 +225,7 @@
         <image name="cookbook_list_item_bg_default.png" width="274" height="206"/>
         <image name="default_avatar.png" width="127" height="127"/>
         <image name="gfcp.png" width="76" height="27"/>
+        <image name="go_forward_white.png" width="31" height="52"/>
         <image name="shijian.png" width="24" height="24"/>
         <image name="v.png" width="14" height="14"/>
     </resources>
